# xfcat

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  clippy.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: ci.yml  release.yml
scripts/: git-config  perf
src/: lib.rs  main.rs
src/cat/: mod.rs  reader.rs  tests.rs  writer.rs
src/commands/: common.rs  list.rs  mod.rs  pack.rs  unpack.rs
src/fs/: mod.rs  path.rs  tests.rs  walk.rs
src/io/: copier.rs  mod.rs  tests.rs
src/log/: console.rs  mod.rs
src/md5/: digest.rs  mod.rs  tests.rs
src/md5/platform/: generic.rs  mod.rs  x86.rs
src/utils/: formatting.rs  mod.rs  path.rs  size.rs  tests.rs  timestamp.rs
